🔨 fix: Image overflowing container in Homepage fixed

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,3 +5,10 @@
         padding-bottom: 3rem;
     }
 }
+
+.image {
+    position: relative;
+    svg {
+        max-width: 100%;
+    }
+}
